    - Improved visual presentation of the matrix solver choices (#200)
    - Improved preference names and descriptions slightly
  Bugfixes:
    - Fixed that items/s/machine didn't divide by the machine amount at all (#177)
    - Fixed that the viewstates didn't update when the timescale for a factory is changed (#209)
    - Fixed pasted modules not updating their effects properly (#187)

---------------------------------------------------------------------------------------------------
Version: 1.1.77
Date: 05. 12. 2023
  Bugfixes:
    - Fixed a crash with the matrix solver when there are no active recipes (#172)
    - Fixed a crash when repairing specific migrated setups (#181)
    - Fixed an issue where deleting a non-selected factory would still delete the currently selected one (#203)
    - Potentially fixed a crashing issue when opening modal dialogs in multiplayer (#201)

---------------------------------------------------------------------------------------------------
Version: 1.1.76
Date: 29. 11. 2023
  Bugfixes:
    - Fixed various related crashes when deleting all the lines on a subfloor (#182)
    - Fixed a migration crash that would show up in certain setups (#173)
    - Fixed an embarrasing migration issue that would overwrite beacon modules with machine ones (#169)
    - Fixed a crash when trying to migrate from a mod version of 1.1.64 or earlier (#190) (Thanks francoiscampbell!)
    - Fixed an issue when trying to open top level byproducts and ingredients in Recipe Book (#191)

---------------------------------------------------------------------------------------------------
Version: 1.1.75
Date: 22. 11. 2023
  Bugfixes:
    - Fix crash when clicking on any line product (#167)
    - Fix crash when opening the tutorial dialog (#176)
    - Fixed a crash when trying to create a combinator containing modules (#174)
    - Fixed an icon not being shown properly in languages other than English
